--- a/DapperDemo/Views/Companies/Create.cshtml
+++ b/DapperDemo/Views/Companies/Create.cshtml
@@ -1,12 +1,7 @@
 ﻿@model DapperDemo.Models.Company
 
-@{
-    ViewData["Title"] = "Create";
-}
+<h1>Create Company</h1>
 
-<h1>Create</h1>
-
-<h4>Company</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -37,15 +32,19 @@
                 <input asp-for="PostalCode" class="form-control" />
                 <span asp-validation-for="PostalCode" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <br />
+            <div class="form-group row">
+                <div class="col-6">
+                    <input type="submit" value="Create" class="btn btn-primary form-control" />
+
+                </div>
+                <div class="col-6">
+                    <a asp-action="Index" class="btn btn-warning form-control">Back to List</a>
+
+                </div>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
